// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with props.onChange renders the input with an onChange 1`] = `
<p
  className="mb0"
>
  <label
    className="db fw6 lh-copy f5"
    htmlFor="maximum-spend"
  >
    Max to spend
  </label>
  <CurrencyInput
    className="pa2 w-100 input-reset ba measure b--black-20"
    id="maximum-spend"
    onChange={[Function]}
    type="number"
  />
</p>
`;

exports[`with props.value renders the input with a value 1`] = `
<p
  className="mb0"
>
  <label
    className="db fw6 lh-copy f5"
    htmlFor="maximum-spend"
  >
    Max to spend
  </label>
  <CurrencyInput
    className="pa2 w-100 input-reset ba measure b--black-20"
    id="maximum-spend"
    type="number"
    value="hey"
  />
</p>
`;

exports[`with required props renders the input 1`] = `
<p
  className="mb0"
>
  <label
    className="db fw6 lh-copy f5"
    htmlFor="maximum-spend"
  >
    Max to spend
  </label>
  <CurrencyInput
    className="pa2 w-100 input-reset ba measure b--black-20"
    id="maximum-spend"
    type="number"
  />
</p>
`;
